--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="/index.css">
     <title>Capstone 2</title>
 </head>
 <body>
@@ -37,7 +37,7 @@
         <img src="img/desktop/image-transform.jpg" alt="">
     </nav>
     <nav class="content2">
-        <img src="img/desktop/image-stand-out.jpg" alt="">
+        <img src="/img/desktop/image-stand-out.jpg" alt="">
         <div id="text2">
             <h1>Stand out to the right audience</h1>
             <p>Using a collaborative formula of designers, researchers, videographer, and copywriters, we'll build and extend your brand in digital places.</p>
@@ -59,20 +59,20 @@
             <h1 id="testid">Client Testimonials</h1>
         <div class="test-content">
             <div class="test1">
-                <img src="img/image-emily.jpg" alt="emily">
+                <img src="/img/image-emily.jpg" alt="emily">
                 <p id="test-text">We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit</p>
                 <h3 class="name">Emily R.</h3>
                 <p id="position">Marketing Director</p>
             </div>
             
             <div class="test2">
-                <img src="img/image-thomas.jpg" alt="thomas">
+                <img src="/img/image-thomas.jpg" alt="thomas">
                 <p id="test-text">Sunnyside's enthusiasm coupled with their keen interest in our brand's success made it a satisfying and enjoyable experience</p>
                 <h3 class="name">Thomas S.</h3>
                 <p id="position">Chief Operating Officer</p>
             </div>
             <div class="test3">
-                <img src="img/image-jennie.jpg" alt="jennie">
+                <img src="/img/image-jennie.jpg" alt="jennie">
                 <p id="test-text">Increadible end results! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
                 <h3 class="name">Jenni F.</h3>
                 <p id="position">Business Owner</p>
@@ -80,10 +80,10 @@
         </div>
     </nav>
     <nav class="images">
-        <img src="img/desktop/image-gallery-milkbottles.jpg" alt="">
-        <img src="img/desktop/image-gallery-orange.jpg" alt="">
-        <img src="img/desktop/image-gallery-cone.jpg" alt="">
-        <img src="img/desktop/image-gallery-sugarcubes.jpg" alt="">
+        <img src="/img/desktop/image-gallery-milkbottles.jpg" alt="">
+        <img src="/img/desktop/image-gallery-orange.jpg" alt="">
+        <img src="/img/desktop/image-gallery-cone.jpg" alt="">
+        <img src="/img/desktop/image-gallery-sugarcubes.jpg" alt="">
     </nav>
     <nav class="footer">
         <div class="footer-header">
